<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context="com.ifragmented.apps.soldier.UserInfoActivity">
    <TextView
        style="@style/TitleTextView"
        android:text="@string/title_new_game"
        />
    <TextView
        android:text="@string/user_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_user_name"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/continue_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startGameWithUser"/>
</LinearLayout>
